tests/urmoac/errors/net_issues/testsuite.urmoac
# edge length=0
edge_length_0

# edge vmax=0
edge_vmax_0

# duplicate edge id
duplicate_edge_id

# correct network
correct
